--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-html {
+body {
   background: linear-gradient(rgba(34, 41, 65, 0.45), rgba(46, 55, 86, 0.45)), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1387378/bg.png");
   background-size: cover;
   background-position: center;
