--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@ body {
   width: 100%;
   overflow: hidden;
 }
-
+section{
+	display:flex;
+	flex-direaction:column;
+	}
+	section >div{
+		margin:auto;
+	}
 .hero-head header {
   height: 75px;
 }
@@ -66,6 +72,9 @@ body {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 0.7rem;
+}
+.navbar-brand h3{
+	color:#fff;
 }
 
 /* -------------------- */
