--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ section{
   letter-spacing: 15px;
   color: #ffffff !important;
 }
+.hero-body .subtitle{
+    margin: 0 auto;
+    display: flex;
+}
 .hero-body .subtitle .countdown {
   color: #ffffff;
   font-family: "Roboto Mono", sans-serif;
