--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-4" data-aos="fade-right">
                     <img src="assets/img/me.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>UX Designer</h3>
                     <p class="fst-italic">
                         I love solving UX problems and finding opportunities for good user experience.
@@ -86,7 +86,7 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Information Science Engineering</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Engineering</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a target="_blank" href="https://akshatha.in">akshatha.in</a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>India</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akshatha.suchethan@gmail.com</span></li>
