--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-4" data-aos="fade-right">
                     <img src="assets/img/me.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
+                <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>UX Designer</h3>
                     <p class="fst-italic">
                         I love solving UX problems and finding opportunities for good user experience.
@@ -86,7 +86,7 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Engineering</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Information Science Engineering</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a target="_blank" href="https://akshatha.in">akshatha.in</a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>India</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akshatha.suchethan@gmail.com</span></li>
@@ -289,7 +289,7 @@
                             <h4>Case Study for Food Management App</h4>
                             <p>Case Study - Too Good To Waste</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Case Study"><i class="bx bx-plus"></i></a>
+                                <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Case Study"><i class="bx bx-plus"></i></a>
                                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -303,7 +303,7 @@
                             <h4>App 2</h4>
                             <p>App</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                                <a href="assets/img/portfolio/portfolio-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
