--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <!-- .navbar -->
 
             <div class="social-links">
-                <a href="#" class="facebook"><i class="bi bi-behance"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-envelope"></i></a>
+                <a href="https://www.behance.net/akshathsucheth1" class="facebook"><i class="bi bi-behance"></i></a>
+                <a href="https://www.linkedin.com/in/akshathasuchethan/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="mailto:akshatha.suchethan@gmail.com" class="instagram"><i class="bi bi-envelope"></i></a>
             </div>
 
         </div>
