--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <ul>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Information Science Engineering</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a target="_blank" href="https://akshatha.in">akshatha.in</a></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/assets/files/Portfolio.pdf">Resume</a></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/Akshatha_April 2023.pdf">Resume</a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akshatha.suchethan@gmail.com</span></li>
                             </ul>
                         </div>
