--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <ul>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Information Science Engineering</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a target="_blank" href="https://akshatha.in">akshatha.in</a></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/Akshatha_April 2023.pdf">Resume</a></li>
+                                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/Akshatha_April 2023.pdf">Resume</a></li> -->
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akshatha.suchethan@gmail.com</span></li>
                             </ul>
                         </div>
@@ -172,7 +172,7 @@
                     <div class="progress">
                         <span class="skill">Adobe XD <i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
@@ -189,13 +189,13 @@
                     <div class="progress">
                         <span class="skill">Figma<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
                         <span class="skill">JavaScript <i class="val">55%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
