--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <!-- .navbar -->
 
             <div class="social-links">
-                <a href="https://www.behance.net/akshathsucheth1" class="facebook"><i class="bi bi-behance"></i></a>
-                <a href="https://www.linkedin.com/in/akshathasuchethan/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <a href="mailto:akshatha.suchethan@gmail.com" class="instagram"><i class="bi bi-envelope"></i></a>
+                <a href="https://www.behance.net/akshathsucheth1" target="_blank" class="facebook"><i class="bi bi-behance"></i></a>
+                <a href="https://www.linkedin.com/in/akshathasuchethan/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="mailto:akshatha.suchethan@gmail.com" target="_blank" class="instagram"><i class="bi bi-envelope"></i></a>
             </div>
 
         </div>
@@ -458,9 +458,9 @@
                         <i class="bx bx-share-alt"></i>
                         <h3>Social Profiles</h3>
                         <div class="social-links">
-                            <a href="#" class="facebook"><i class="bi bi-behance"></i></a>
-                            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                            <a href="#" class="instagram"><i class="bi bi-envelope"></i></a>
+                            <a href="https://www.behance.net/akshathsucheth1" target="_blank" class="facebook"><i class="bi bi-behance"></i></a>
+                            <a href="https://www.linkedin.com/in/akshathasuchethan/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                            <a href="mailto:akshatha.suchethan@gmail.com" target="_blank" class="instagram"><i class="bi bi-envelope"></i></a>
                         </div>
                     </div>
                 </div>
