--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><a class="nav-link active" href="#header">Home</a></li>
                     <li><a class="nav-link" href="#about">About</a></li>
                     <li><a class="nav-link" href="#portfolio">Work</a></li>
-                    <li><a class="nav-link" href="assets/files/Akshatha_belgium .pdf">Resume</a></li>
+                    <li><a class="nav-link" href="#resume">Resume</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -88,7 +88,7 @@
                             <ul>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree in Information Science Engineering</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a target="_blank" href="https://akshatha.in">akshatha.in</a></li>
-                                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/Akshatha_April 2023.pdf">Resume</a></li> -->
+                                <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <a target="_blank" href="assets/files/Akshatha_belgium .pdf">Resume</a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akshatha.suchethan@gmail.com</span></li>
                             </ul>
                         </div>
