--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
@@ -298,7 +298,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
