--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>App 1</h4>
-                            <p>App</p>
+                            <h4>Design for Podology Website</h4>
+                            <p>Podology site for a Health Care Professional</p>
                             <div class="portfolio-links">
                                 <a href="assets/files/Medical Appointment Booking APP.pdf" target="_blank"><i class="bx bx-link"></i></a>
                                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -302,8 +302,8 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>App 2</h4>
-                            <p>App</p>
+                            <h4>Case Study for Medical Appointment Booking App</h4>
+                            <p>Case Study - Medlogics App</p>
                             <div class="portfolio-links">
                                 <a href="assets/files/Medical Appointment Booking APP.pdf" target="_blank"><i class="bx bx-link"></i></a>
                                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
