--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             <h4>Design for Podology Website</h4>
                             <p>Podology site for a Health Care Professional</p>
                             <div class="portfolio-links">
-                                <a href="assets/files/Medical Appointment Booking APP.pdf" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="assets/img/portfolio/portfolio-1.jpg" target="_blank"><i class="bx bx-link"></i></a>
                                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                             </div>
