--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <div class="section-title">
                 <h2>Portfolio</h2>
-                <p>My Works</p>
+                <p>My Work</p>
             </div>
 
             <div class="row">
@@ -272,10 +272,10 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>Design for Podology Website</h4>
-                            <p>Podology site for a Health Care Professional</p>
+                            <h4>Design for a podology site for Health Care Professional</h4>
+                            <p>Podologie Website</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.jpg" target="_blank"><i class="bx bx-link"></i></a>
+                                <a href="assets/img/portfolio/PodologySite.pdf" target="_blank"><i class="bx bx-link"></i></a>
                                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                             </div>
