--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>Design for a podology site for Health Care Professional</h4>
-                            <p>Podologie Website</p>
+                            <h4>Design for a Podology Website</h4>
+                            <p>Podologie Site of a Health Care Professional</p>
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/PodologySite.pdf" target="_blank"><i class="bx bx-link"></i></a>
                                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
